<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:theme="@style/DefaultRecyclerViewStyle"
    tools:context=".ui.sobremesas.SobremesasFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sobremesas_es_textView2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/principal_es_textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/sobremesas_es_textView2_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toStartOf="@id/sobremesas_es_textView2_id"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="80dp"
            android:text="@string/sobremesas_es_textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/sobremesas_es_textView2_detalhe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sobremesas_es_textView2_nome"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="80dp"
            android:text="@string/sobremesas_es_textView2" />

        <ImageView
            android:id="@+id/sobremesas_es_imageView2"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:paddingTop="10dp"
            android:src="@drawable/sobremesasn1" />

        <TextView
            android:id="@+id/sobremesas_es_textView2_preco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:text="@string/sobremesas_preco_textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>