<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".ui.entradas.EntradasSecondFragmentDetail">

    <TextView
        android:id="@+id/entrada_detail_textViewNome1"
        android:layout_width="188dp"
        android:layout_height="0dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:text="@string/entrada_es_textView2"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/entrada_detail_imageView1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/entrada_detail_imageView1"
        android:layout_width="240sp"
        android:layout_height="150sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:src="@drawable/entradan0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/entrada_detail_textViewDetalhe1"
        android:layout_width="526dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="145dp"
        android:layout_weight="1"
        android:text="@string/entrada_es_textView2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrada_detail_textViewNome1" />

    <TextView
        android:id="@+id/entrada_detail_textViewPreco1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="112dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/entrada_preco_textView2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrada_detail_imageView1" />

    <Button
        android:id="@+id/button_entrada_fazerpedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/button_entrada_fazerpedido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrada_detail_textViewPreco1" />

    <Button
        android:id="@+id/button_entrada_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_weight="1"
        android:text="@string/previous"
        app:layout_constraintStart_toEndOf="@id/button_entrada_fazerpedido"
        app:layout_constraintTop_toTopOf="@id/button_entrada_fazerpedido" />


    <ImageButton
        android:id="@+id/button_entrada_adicionar"
        android:layout_width="53sp"
        android:layout_height="46sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintStart_toEndOf="@+id/entrada_detail_textViewPreco1"
        app:layout_constraintTop_toBottomOf="@+id/entrada_detail_imageView1" />

    <ImageButton
        android:id="@+id/button_entrada_restar"
        android:layout_width="53sp"
        android:layout_height="46sp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_remove_24"
        app:layout_constraintEnd_toStartOf="@+id/entrada_detail_textViewPreco1"
        app:layout_constraintTop_toBottomOf="@+id/entrada_detail_imageView1" />

    <TextView
        android:id="@+id/entrada_detail_textViewQuantidade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:layout_weight="1"
        android:text="1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button_entrada_adicionar"
        app:layout_constraintTop_toBottomOf="@+id/entrada_detail_imageView1" />
</androidx.constraintlayout.widget.ConstraintLayout>